vlib/v/checker/tests/map_unsupported_key_type_err.vv
import datatypes
import time

fn direct() {
	_ := map[time.Time]int{}
}

fn wrapped() {
	_ := datatypes.Set[time.Time]{}
}
